welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:5: error: not found: value tab
		if (lookingFor == tab(i)) {
                                  ^occurrences:4: error: type mismatch;
 found   : Unit
 required: Int
	for (i<-0 to l ) { 
              ^